# srxy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  gitleaks.yml
docs/: cli.md  development.md  installation.md  power-ups.md  python-api.md  tui.md
examples/: playground.py
scripts/: clear_models.sh  clear_results_cache.sh  download_semantic_model.sh  test-package  upload.sh
scripts/docs/: export_tui_screenshot.sh
scripts/fixtures/: build_photoshop_xmp_fixture.py
scripts/qa/: run_device_matrix.sh  run_qa_matrix.sh  run_tui_manual.sh
scripts/quality/: build.sh  checks.sh  pyright.sh  pytest.sh  ruff.sh  shellcheck.sh
scripts/quality/internal/: audit_deps.sh  gate.sh  gate_emit.py  lib.sh
src/srxy/: __init__.py  archive_guard.py  archive_search.py  cache.py  cli.py  core.py  device.py  document_text.py  dsl.py  file_query.py  file_search.py  image_formats.py  media_metadata.py  model_store.py  models.py  ocr_text.py  progress.py  semantic_image.py  transcribe_text.py  utils.py  windows_metadata.py  xattr_metadata.py
src/srxy/matchers/: base.py  composite.py  contains.py  exact.py  fuzzy.py  partial.py  phonetic.py  registry.py  semantic.py
src/srxy/tui/: __init__.py  app.py  messages.py  modals.py  preflight.py  query_builder.py  search_filters.py  search_options.py  search_worker.py  size_limits.py  theme.py
tests/: conftest.py  fixture_xmp.py  helpers.py
tests/fixtures/: README.md  search_corpus.json
tests/fixtures/corpus/: labeled_queries.json
tests/fixtures/file_search/samples/documents/: sample.docx  sample.pptx  sample.xlsx
tests/fixtures/file_search/samples/edge/: .hidden_secret  noise_notes.txt
tests/fixtures/qa_corpus/: README.md
tests/fixtures/qa_corpus/docs/: notes.txt
tests/fixtures/qa_corpus/qa_downloads/documents/: sample.docx  sample.pptx  sample.xlsx
tests/integration/: conftest.py  test_cache_timing.py  test_corpus_search.py  test_file_search_fixtures.py  test_ocr_fixtures.py  test_semantic_file_search.py
tests/integration/qa/: conftest.py  test_release_qa.py
tests/tui/: helpers.py  test_display.py  test_download_modal.py  test_file_search_tui.py  test_qa_integration.py  test_query_builder_display.py  test_search_filters_modal.py  test_search_options_modal.py  test_size_limits_modal.py  test_tui_modals_integration.py
tests/tui/snapshots/: download_progress_modal_textual-dark.snap.txt  query_builder_advanced_textual-dark.snap.txt  query_builder_advanced_textual-light.snap.txt  query_builder_invalid_textual-light.snap.txt  query_builder_or_terms_textual-dark.snap.txt  query_builder_or_terms_textual-light.snap.txt  query_builder_round_trip_light.snap.txt  search_filters_modal_textual-dark.snap.txt  search_filters_modal_textual-light.snap.txt  search_filters_modal_typing_textual-dark.snap.txt  search_filters_modal_typing_textual-light.snap.txt  search_options_modal_textual-dark.snap.txt  search_options_modal_textual-light.snap.txt  size_limits_modal_textual-dark.snap.txt  srxy_app_advanced_open_textual-dark.snap.txt  srxy_app_advanced_open_textual-light.snap.txt  srxy_app_advanced_toggle_textual-dark.snap.txt  srxy_app_advanced_toggle_textual-light.snap.txt  srxy_app_filters_open_textual-dark.snap.txt  srxy_app_filters_open_textual-light.snap.txt  srxy_app_filters_typing_textual-dark.snap.txt
tests/unit/: conftest.py  test_archive_guard.py  test_archive_search.py  test_cache.py  test_cli.py  test_device.py  test_document_metadata.py  test_document_ocr.py  test_document_progress.py  test_dsl.py  test_file_query.py  test_file_search.py  test_image_formats.py  test_magic_search.py  test_matchers.py  test_media_metadata.py  test_model_store.py  test_ocr_text.py  test_phrase_matching.py  test_progress.py  test_query_builder.py  test_search.py  test_search_worker.py  test_semantic.py  test_semantic_cache.py  test_semantic_image.py  test_semantic_rescue.py  test_transcribe_text.py  test_tui.py  test_tui_search_filters.py  test_tui_search_options.py  test_tui_size_limits.py  test_utils.py  test_windows_metadata.py  test_xattr_metadata.py
