[project]
name = "srxy"
version = "1.2.0"
description = "Find files by what you mean — from the terminal or Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
	"exifread>=3.5",
	"jellyfish>=1.2",
	"mutagen>=1.48",
	"openpyxl>=3.1",
	"pillow>=12.2",
	"pillow-heif>=1.4",
	"pypdf>=6.14",
	"pytesseract>=0.3",
	"python-docx>=1.2",
	"python-pptx>=1.0",
	"rapidfuzz>=3.14",
]

[project.optional-dependencies]
# Text + image semantic search (sentence-transformers → PyTorch, CLIP, MiniLM).
semantic = [
	"faster-whisper>=1.2",
	"nvidia-cublas-cu12; platform_system == 'Linux'",
	"rawpy>=0.27",
	"sentence-transformers>=5.6",
]
windows = [
	"pywin32>=312",
]
dev = [
	"basedpyright>=1.39",
	"pip-audit>=2.10",
	"pytest>=9.1",
	"pytest-cov>=7.1",
	"ruff>=0.15",
]
uploader = [
	"build>=1.5",
	"twine>=6.2",
]

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
srxy = "srxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
	"unit: fast isolated tests",
	"integration: tests using real models and fixture datasets",
	"ocr: tests requiring a real OCR backend",
	"linux_xattr: tests that require Linux extended attribute support",
	"macos_finder: tests that require writable macOS Finder tag extended attributes",
	"windows_tags: tests that require Windows Explorer tag support via pywin32",
	"transcribe: tests requiring faster-whisper, transformers, and ffmpeg",
	"semantic: tests requiring pip install 'srxy[semantic]' (torch, sentence-transformers, etc.)",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["F", "I", "E", "S", "B"]
fixable = ["ALL"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["S603", "S607"]
"tests/**" = ["S101"]

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAttributeAccessIssue = false
executionEnvironments = [
	{ root = "src/srxy/windows_metadata.py", reportMissingModuleSource = "none", reportMissingImports = "none" },
	{ root = "src/srxy/device.py", reportMissingImports = "none" },
	{ root = "src/srxy/semantic_image.py", reportMissingImports = "none" },
	{ root = "src/srxy/matchers/semantic.py", reportMissingImports = "none" },
	{ root = "src" },
	{ root = "tests", extraPaths = ["src", "."] },
]

[tool.coverage.run]
source = ["srxy"]
omit = ["tests/*"]
